# fellowship-mod

./: .gitignore  Makefile  README.md  aider-notes.md  aider.notes.md  aider.scratch.md  aider.todo.md  proof_term.fspy  pyproject.toml  requirements-dev.txt
core/ac/: ast.py  grammar.py  instructions.py
core/comp/: __init__.py  alpha.py  color.py  enrich.py  neg_rewrite.py  (+2 more)
fellowship-0.1.0/: .gitignore
fsp/: svn-commit.tmp
lib/: division.fspy  fol.fspy
mod/: README.md
pres/: gen.py  mirror.py  nl.py  tree.py
scasp_import/: __init__.py  importer.py  report.tex
tests/: alternative_arguments.fspy  basic_support.fspy  conftest.py  counterarguments_and_undercut.fspy  default_test.fsp  default_test.fspy  error_warning_test.fsp  falsum.fspy  graft_conclusion_formatting.fspy  marius_example.fspy  mirror_minimal.fspy  moxia_smart.fspy  mu_reduction_test.py  multiple_supports_stack_vs_queue.fspy  multiple_undercuts.fspy  normalize_render.fspy  normalize_render.fspy~  peirces_law.fspy  reduction_test.py  simple_tautology.fspy  tactics.fspy  test_1.v  test_affine_cut.py  test_affine_elim.py  test_affine_wrapper.py  test_attack_expand_defaults.py  test_declaration.py  test_default_eta_long.py  test_empty_execute_regression.py  test_fo_4.fsp  test_graft_affine_capture.py  test_graft_conclusion_formatting.py  test_interactive_mode.py  test_mirror_minimal.py  test_multiple_supports_order.py  test_nl_visitor_equivalence.py  test_onus_categories.py  test_parser_moxia_utils.py  test_pop_subargument.py  test_prop_enrichment.py  (+10 more)
wrap/: cli.py  prover.py  scasp_translation.py
(+389 files in other folders)
