[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acdc"
version = "0.1.0"
description = "Fellowship prover wrapper and argument/debate calculus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lark>=1.1,<2",
  "pexpect>=4.8,<5",
]

[project.scripts]
acdc = "wrap.cli:main"

[tool.setuptools.packages.find]
include = ["core*", "pres*", "wrap*", "mod*"]
